infra/k8s/auth-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-pg-depl
spec:
  selector:
    matchLabels:
      app: auth-pg-depl
  template:
    metadata:
      labels:
        app: auth-pg-depl
    spec:
      containers:
        - name: auth-pg-depl
          image: postgres
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
